# 2025-E-

./: README.md  Readme.md
硬件设计/: ProPrj_MSP_M0_G3507_扩展板_2025-09-12.epro  ProPrj_红外巡线_2025-09-12.epro
硬件设计/打印件3D模型/: 激光合摄像头.SLDPRT  简易底板上.SLDPRT  简易底配铜柱.SLDPRT  简易法兰盘5mm.SLDPRT  红外支架.SLDPRT  车底板MG513x.SLDPRT
软件设计/小车程序/: Readme.md
软件设计/小车程序/carNoTi/: .cproject  .mxproject  .project  CMakeLists.txt  carNoTi.ioc  stm32h750b-disco.cfg
软件设计/小车程序/carNoTi/Core/Inc/: main.h  stm32h7xx_it.h
软件设计/小车程序/carNoTi/Core/Src/: adc.c  fdcan.c  freertos.c  gpio.c  i2c.c  main.c  stm32h7xx_it.c  tim.c  usart.c
软件设计/小车程序/carNoTi/SYS/C/: can_motor_control.c  control.c  dataRec.c  entry.c  yunTaiQuestion.c
软件设计/小车程序/carNoTi/SYS/H/: can_motor_control.h  control.h  dataRec.h  entry.h  yunTaiQuestion.h
软件设计/小车程序/carTi/: .ccsproject  .cproject  .project  empty.c  empty.syscfg
软件设计/小车程序/carTi/Debug/: carTi.map  carTi.out  carTi_linkInfo.xml  ccsObjs.opt  empty.d  makefile  sources.mk  startup_mspm0g350x_ticlang.d  subdir_rules.mk  subdir_vars.mk  ti_msp_dl_config.c  ti_msp_dl_config.d  ti_msp_dl_config.h
软件设计/小车程序/carTi/Debug/.clangd/: compile_commands.json
软件设计/小车程序/carTi/SYS/C/: PID.c  Trace.c  control.c  dataRead.c  entry.c
软件设计/小车程序/carTi/SYS/H/: PID.h  Trace.h  control.h  (+2 more)
软件设计/无线程序/: ESPNow_Car.c  ESPNow_computer.c  Readme.txt
软件设计/无线程序/dianSai2025(中控台)/: CMakeLists.txt  sdkconfig  sdkconfig.old
软件设计/无线程序/dianSai2025(中控台)/main/: CMakeLists.txt  TaskList.c  TaskList.h  interface.c  interface.h  main.c
软件设计/树莓派程序/: c1.py  calibration_result.yaml  jiaozheng.py
(+144 files in other folders)
